// This file contains temporary wire-level protobuf messages that we have
// identified to be different or missing from the current protobuf files
// last updated in January 2015. These messages will disappear once we have
// new protobufs extracted from the real Source 2 client.

option go_package = "manta";

message WireSendTable {
  required int32 index = 1;
  optional int32 unknown2 = 2; // sometimes present, unknown. flags?
  repeated int32 properties = 3;
}

message WireSendProp {
  required int32 type_index = 1; // identifier, mapped from Thing10.Unknown3. has a string
  required int32 var_index = 2; // string index
  optional int32 unknown3 = 3; // num_bits?
  optional float low_value = 4; // low_value ?
  optional float high_value = 5; // high_value ?
  optional int32 unknown6 = 6;
  optional int32 unknown7 = 7;
  optional int32 unknown8 = 8;
  required int32 unknown9 = 9; // type?
}
